ipAddress fetch fix
